test/spec_vectors/memory_copy/fail/module_19.wat
(module (func (export "testfn") (memory.copy (i32.const 10) (i32.const 20) (i32.const 30))))